Wed Oct 06 12:19:39 BST 2004  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated from tinderbox.

Wed Oct 06 01:10:46 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/quartz_document.cc,
	  matcher/multimatch.cc,common/multimatch.h: Fix some warnings
	  from Sun's C++ compiler.

Thu Sep 30 22:16:37 BST 2004  Olly Betts <olly@survex.com>

	* common/utils.cc,common/utils.h: Fixes for win32 and sun's c++
	  compiler.

Thu Sep 30 18:24:20 BST 2004  Olly Betts <olly@survex.com>

	* common/utils.h,extra/queryparser.yy: Fixed bug which caused
	  misparsing of certain prefixed queries, introduced by C_isXXXXX
	  change.

Thu Sep 30 11:09:17 BST 2004  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: Modified version of changequery1 fails - the
	  fix is tricky, so just make it SKIP for now.

Wed Sep 29 21:33:29 BST 2004  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Fixed to work when srcdir != builddir.

Wed Sep 29 18:52:04 BST 2004  Olly Betts <olly@survex.com>

	* PLATFORMS,docs/Makefile.am: Workaround odd latex problem.

Wed Sep 29 17:10:00 BST 2004  Olly Betts <olly@survex.com>

	* configure.ac,docs/doxygen_api_conf.in,docs/doxygen_full_conf.in:
	  Updated doxygen conf files for doxygen 1.3.8.

Wed Sep 29 16:52:53 BST 2004  Olly Betts <olly@survex.com>

	* common/utils.cc,common/utils.h,extra/Makefile.am,
	  extra/queryparser.yy,tests/api_anydb.cc,testsuite/index_utils.cc:
	  Provide our own C_isalpha(), etc replacements for isalpha(), etc
	  which always work in the C locale and avoid signed char problems.

Tue Sep 28 00:04:11 BST 2004  Olly Betts <olly@survex.com>

	* common/utils.cc,common/utils.h: rmdir() isn't a sensible candidate
	  for inlining so move it out of the header.

Mon Sep 27 17:33:23 BST 2004  Olly Betts <olly@survex.com>

	* extra/queryparser.yy: Be smarter about when to add a ':' when adding
	  a term prefix.

Mon Sep 27 16:01:37 BST 2004  Olly Betts <olly@survex.com>
